Resolved footer alignment to centered and changed background color

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,6 +1,16 @@
+// * {
+// 	border: 1px solid #000;
+// }
+
 body {
 	position:relative;
 	padding:50px;
+	background-color:#CCC;
+}
+footer{
+	display:inline-block;
+	width:100%;
+	text-align:center;
 }
 
 .content{
